<resources>

    <string name="app_name">Sprout</string>
    <string name="settingsMenuString">Impostazioni</string>
    <string name="aboutMenuString">Chi siamo</string>
    <string name="statsContentDescription">Statistiche</string>
    <string name="statsMenuTitle">Statistiche</string>
    <string name="searchContentDescription">Cerca abitudine</string>
    <string name="searchMenuTitle">Cerca</string>
    <string name="save_fab">Salva l\'abitudine</string>
    <string name="error_title_is_empty">Il titolo non può essere vuoto</string>
    <string name="title_hint">Titolo dell\'abitudine</string>
    <string name="classic_habit_info">
        Con questa tipologia puoi tenere traccia delle abitudini che devono essere completate una sola volta al giorno.
    </string>
    <string name="counter_habit_info"> Se hai bisogno di ripetere un\'abitudine più volte al giorno
        (come ad esempio bere 4 bicchieri d’acqua).
    </string>
    <string name="frequency_title">Frequenza settimanale</string>
    <string name="mondayString">L</string>
    <string name="tuesdayString">M</string>
    <string name="wednesdayString">M</string>
    <string name="thursdayString">G</string>
    <string name="fridayString">V</string>
    <string name="saturdayString">S</string>
    <string name="sundayString">D</string>
    <string name="habit_type_title">Tipologia dell\'abitudine</string>
    <string name="delete_button_content_description">Elimina</string>
    <string name="pause_button_content_description">Metti in pausa</string>
    <string name="add_reminder_button_content_description">Aggiungi un promemoria</string>
    <string name="reminder_title">Notifiche</string>
    <string name="emptyMainActivityMessage">
        Non hai inserito ancora nessuna abitudine! Crearne una
        è facile, ti basta cliccare sul tasto in basso per iniziare!
    </string>
    <string name="title_activity_create_habit">Nuova abitudine</string>
    <string name="MainActivityTitle">Le mie abitudini</string>
    <string name="snooze_title">Rinvii settimanali</string>
    <string name="snooze_info">I rinvii ti permettono di non segnare come completata l’abitudine, mantenendo però la serie.</string>
    <string name="max_snoozes_subtitle">Rinvii massimi</string>
    <string name="counter_habit_repetition_subtitle">Ripetizioni</string>
    <string name="goal_action_info">L’abitudine viene archiviata quando raggiungi il numero di azioni previste.</string>
    <string name="deadline_picker_button">Seleziona una data</string>
    <string name="goal_deadline_picker">Aggiungi una data</string>
    <string name="reminder_info">Con le notifiche non ti dimenticherai dell\'abitudine.</string>
    <string name="counter_habit_subtitle">Abitudine ripetuta</string>
    <string name="empty_frequency_warning">Seleziona almeno un giorno della settimana.</string>
    <string name="classic_habit_subtitle">Abitudine Classica</string>
    <string name="goal_fragment_title">Scegli un obiettivo</string>
    <string name="goal_action_subtitle">Azioni da completare</string>
    <string name="goal_deadline_subtitle">Deadline</string>
    <string name="goal_deadline_info">L\'abitudine viene archiviata automaticamente quando viene superata la seguente data:</string>
    <string name="goal_streak_subtitle">Streak</string>
    <string name="goal_streak_info">Quando completi l\'abitudine per un certo numero di giorni di fila, questa viene archiviata.</string>
    <string name="no_goal_subtitle">Nessun Obiettivo</string>
    <string name="no_goal_info">L\'abitudine non verrà mai archiviata.</string>
    <string name="preset_image_content_description">Immagine dell\'abitudine preset.</string>
    <string name="show_more_content_description">Mostra altro</string>
    <string name="preset_habit_title">Abitudini pronte all\'uso</string>
    <string name="general_title">Titolo abitudine</string>
    <string name="preset_habit_title_placeholder">Lorem ipsum dolor sit amet</string>
    <string name="preset_drink_more_water">Bevi più acqua</string>
    <string name="preset_do_more_sports">Fai sport</string>
    <string name="preset_go_to_bed_early">Vai a dormire presto</string>
    <string name="preset_habit_loading_snackbar">Caricamento completato !</string>
    <string name="preset_take_meds">Prendi le medicine</string>
    <string name="edit_habit">Modifica l\'abitudine</string>
    <string name="edit_habit_delete_button">Elimina</string>
    <string name="error_deadline_is_empty">Inserisci una data di scadenza</string>
    <string name="title_activity_settings">Impostazioni</string>
    <string name="light">Chiaro</string>
    <string name="dark">Scuro</string>
    <string name="predefined">Predefinito</string>
    <string name="messages_header">Generale</string>
    <string name="theme_title">Tema dell\'applicazione</string>
    <string name="about_us_title">Sprout (HCI 2020)</string>
    <string name="about_us_message">Prodotto da Michele e Salvatore.\n</string>
    <string name="title_activity_stats">Statistiche</string>
    <string name="title_activity_edit_habit">Modifica l\'abitudine</string>
    <string name="global_stats_title_card">Statistiche globali</string>
    <string name="time_textview">Tempo di utilizzo</string>
    <string name="time_placeholder">9999:59</string>
    <string name="habit_created_textview">Abitudini create</string>
    <string name="habit_created_placeholder">999</string>
    <string name="habit_completed_textview">Abitudini completate</string>
    <string name="habit_completed_placeholder">999</string>
    <string name="habit_list_textview">Lista delle abitudini</string>
    <string name="hour_textview">ore</string>
    <string name="neutral_dialog_button">Annulla</string>
    <string name="positive_permission_dialog_button">Si</string>
    <string name="permission_dialog_message">Vuoi consentire l\'accesso alle statistiche sull\'uso del dispositivo da parte dell\'app?</string>
    <string name="habit_item_title_placeholder">Titolo dell\'abitudine</string>
    <string name="habit_item_date_placeholder">22/08/2020</string>
    <string name="habit_item_creation_content_description">Creato in data</string>
    <string name="habit_item_end_content_description">Archiviato in data</string>
    <string name="no_item_message">Non ci sono elementi da visualizzare.</string>
    <string name="no_item_found_message">Nessun elemento trovato</string>
    <string name="delete_stats_menu_item">Azzera le statistiche</string>
    <string name="delete_habit_dialog_message">Vuoi eliminare l\'abitudine? Perderai tutti i tuoi progressi!</string>
    <string name="positive_dialog_button">Sì, cancella</string>
    <string name="title_habit_type_stats">Abitudine:</string>
    <string name="counter">Contatore</string>
    <string name="classic">Classica</string>
    <string name="title_goal_stats">Obiettivo:</string>
    <string name="none">Nessuno</string>
    <string name="action">Azioni</string>
    <string name="deadline">Deadline</string>
    <string name="streak">Serie</string>
    <string name="no_data_available">Nessun dato disponibile per la visualizzazione</string>
    <string name="days">Giorni</string>
    <string name="month">Mesi</string>
    <string name="best_streak_chart_title">Serie migliori</string>
    <string name="monthly_chart_title">Azioni mensili</string>
    <string name="day">Giorno</string>
    <string name="tree_content_description">Albero</string>
    <string name="main_activity_habit_title_placeholder">Titolo abitudine</string>
    <string name="completed_button">Completato</string>
    <string name="snooze_button">Rinvia</string>
    <string name="main_activity_habit_counter_placeholder">Completata 0 volte su 5</string>
    <string name="new_habit_success_message">Nuova abitudine creata con successo!</string>
    <string name="completed">Completata!</string>
    <string name="channel_name">Notifica dell\'abitudine</string>
    <string name="channel_description">Le notifiche decise dall\'utente.</string>
    <string name="delete_habit_dialog_confirmation_toast">Abitudine eliminata!</string>
    <string name="negative_delete_habit_dialog">No</string>
    <string-array name="months">
        <item>G</item>
        <item>F</item>
        <item>M</item>
        <item>A</item>
        <item>M</item>
        <item>G</item>
        <item>L</item>
        <item>A</item>
        <item>S</item>
        <item>O</item>
        <item>N</item>
        <item>D</item>
    </string-array>

    <plurals name="counterHabitRepetitionsLabel">
        <item quantity="one">Completata %1$d volta su %2$d</item>
        <item quantity="other">Completata %1$d volte su %2$d</item>
    </plurals>
    <string name="counter_habit_picker_title">Completamento multiplo</string>
    <string name="counter_habit_number_picker_dialog">Seleziona quante volte hai completato la tua abitudine oggi:</string>
    <string name="delete_stats_dialog_message">Vuoi davvero eliminare le statistiche?</string>
    <string name="delete_stats_result_message">Statistiche eliminate</string>
    <string name="snoozed">Rinviata!</string>
    <string name="habit_updated_snackbar">Abitudine aggiornata!</string>
    <string name="snackbar_snoozed_label">Abitudine rinviata!</string>
    <string name="habit_cannot_be_snoozed_snackbar">Non puoi più rinviare l\'abitudine!</string>
    <string name="snackbar_cancel_action">Annulla</string>
    <string name="sky_content_description">Cielo</string>
    <string name="classic_habit_card_label">Da completare</string>
    <string name="notification_content_text_base">Completa la tua abitudine!</string>
</resources>