<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:contentDescription="@string/searchContentDescription"
        android:icon="@drawable/ic_search_24"
        android:title="@string/searchMenuTitle"

        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/statsItem"
        android:contentDescription="@string/statsContentDescription"
        android:icon="@drawable/ic_chart_24"
        android:title="@string/statsMenuTitle"
        app:showAsAction="always" />


</menu>