<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/SproutTitle"
        android:textSize="14sp"
        android:text="@string/frequency_title" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fadingEdge="horizontal"
        android:requiresFadingEdge="horizontal"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/frequencyGroup"
            style="@style/Widget.MaterialComponents.ChipGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:checkedChip="@id/mondayChip"
            app:chipSpacingHorizontal="0sp"
            app:itemSpacing="-5sp"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/mondayChip"
                style="@style/SproutChip"
                android:checked="true"
                android:text="@string/mondayString"
                app:checkedIconEnabled="false"
                app:closeIconEnabled="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/tuesdayChip"
                style="@style/SproutChip"

                android:text="@string/tuesdayString"
                app:checkedIconEnabled="false"
                app:closeIconEnabled="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/wednesdayChip"
                style="@style/SproutChip"
                android:text="@string/wednesdayString"
                app:checkedIconEnabled="false"
                app:closeIconEnabled="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/thursdayChip"
                style="@style/SproutChip"
                android:text="@string/thursdayString"
                app:checkedIconEnabled="false"
                app:closeIconEnabled="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/fridayChip"
                style="@style/SproutChip"
                android:text="@string/fridayString"
                app:checkedIconEnabled="false"
                app:closeIconEnabled="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/saturdayChip"
                style="@style/SproutChip"
                android:text="@string/saturdayString"
                app:checkedIconEnabled="false"
                app:closeIconEnabled="false" />

            <com.google.android.material.chip.Chip
                android:id="@+id/sundayChip"
                style="@style/SproutChip"
                android:text="@string/sundayString"
                app:checkedIconEnabled="false"
                app:closeIconEnabled="false" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

</LinearLayout>