<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/SproutBoldSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/counter_habit_subtitle" />

    <TextView
        android:id="@+id/informationMessage"
        style="@style/SproutInfo"
        android:text="@string/counter_habit_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/SproutBoldSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/counter_habit_repetition_subtitle" />

        <com.shawnlin.numberpicker.NumberPicker
            android:id="@+id/repetitionsPicker"
            style="@style/SproutNumberPicker"

            app:np_max="59"
            app:np_min="1"
            app:np_value="3" />

    </LinearLayout>

</LinearLayout>