<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/SproutTitleHorizontal"
                android:text="@string/reminder_title" />

            <ImageButton
                android:id="@+id/addReminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"

                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/add_reminder_button_content_description"
                android:padding="10dp"
                android:src="@drawable/ic_add_24"
                android:tint="?attr/colorOnSurface" />

        </LinearLayout>

        <TextView
            style="@style/SproutInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/reminder_info" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/remindersRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            tools:itemCount="8"
            tools:listitem="@layout/fragment_reminders_item" />

    </LinearLayout>

</androidx.cardview.widget.CardView>


